# agent-python

./: .coveragerc  .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .releaserc.js  CHANGELOG.md  README.md  __pyproject.toml  __pytest.ini  launch_tests_ci_like.sh  package.json  pytest.ini  requirements.txt
src/: test_rpc_client.py  (+2 more)
src/_example/django/: .env.docker.sample  .env.sample  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
src/_example/django/django_demo/: .forestadmin-schema.json  .forestadmin-schema_full_v2.json  .forestadmin-schema_json_api.json  .forestadmin-schema_v2.json
src/_example/django/django_demo/app/: admin.py  apps.py  flask_models.py  forest_admin.py  models.py  sqlalchemy_models.py
src/_example/django/django_demo/bedrock_ai/: apps.py  bedrock_client.py  mcp_client.py
src/_example/django/django_demo/big_ram/: apps.py  models.py
src/_example/django/django_demo/django_demo/: colorized_logging.py  db_router.py  settings.py  urls.py
src/_example/fastapi/: .env.sample  README.md  pyproject.toml
src/_example/fastapi/src/: .forestadmin-schema.json  config.py  custom_logs.py  database.py  forest_admin.py  main.py
src/_example/fastapi/src/forest/: address.py  agent.py  cart.py  customer.py  order.py
src/_example/fastapi/src/sql_alchemy/: models.py
src/_example/fastapi/src/with_sql_alchemy/: models.py
src/agent_toolkit/: .coveragerc  pyproject.toml  requirements.txt  setup.cfg
src/agent_toolkit/forestadmin/agent_toolkit/: __init__.py  agent.py  exceptions.py  forest_logger.py  options.py  t.json
src/agent_toolkit/forestadmin/agent_toolkit/resources/: base.py  capabilities.py  context_variable_injector_mixin.py  ip_white_list_resource.py  mcp.py
src/agent_toolkit/forestadmin/agent_toolkit/utils/: authentication.py  context.py  context_variable_injector.py  context_variable_instantiator.py  context_variables.py  csv.py  http.py  id.py  ip_whitelist_util.py  sql_query_checker.py  token.py
src/agent_toolkit/tests/: test_agent_toolkit.py  test_options_validations.py
src/agent_toolkit/tests/fixtures/: models.py
src/agent_toolkit/tests/resources/: test_capabilities_resource.py  test_ip_whitelist_resource.py
src/agent_toolkit/tests/resources/actions/: test_resources.py
src/agent_toolkit/tests/resources/collections/: test_chart_collection.py  test_chart_datasource.py  test_crud.py  test_crud_related.py  test_decorators.py  test_filter.py  test_native_query.py  test_stats_resources.py
src/agent_toolkit/tests/resources/security/: test_authentication_resource.py
src/agent_toolkit/tests/services/: test_ip_whitelist_service.py
src/agent_toolkit/tests/services/serializers/: test_jsonapi.py  test_search_metadata.py  test_serializer.py
src/agent_toolkit/tests/utils/: test_authentication.py  test_context.py  test_context_variables.py  test_csv.py  test_http.py  test_ip_whitelist_util.py  test_sql_query_checker.py
src/agent_toolkit/tests/utils/forest_schema/: test_action_fields.py  test_action_values.py  test_generator_action.py  test_generator_action_field_widget.py  test_generator_field.py  test_schema_emitter.py
src/datasource_django/: pyproject.toml
src/datasource_django/forestadmin/datasource_django/: collection.py  datasource.py  exception.py  interface.py
src/datasource_django/forestadmin/datasource_django/utils/: model_converter.py  model_introspection.py  native_driver_wrapper.py  polymorphic_util.py  query_factory.py  record_serializer.py  type_converter.py
src/datasource_django/tests/: test_django_collection.py  test_django_datasource.py
src/datasource_django/tests/test_project/test_app/: models.py
src/datasource_django/tests/test_project/test_project/: settings.py
src/datasource_django/tests/test_project_datasource/: manage.py
src/datasource_django/tests/test_project_datasource/test_app/: models.py
src/datasource_django/tests/test_project_datasource/test_project_datasource/: db_router.py  settings.py
src/datasource_django/tests/utils/: test_django_model_converter.py  test_django_model_introspection.py
src/datasource_sqlalchemy/: .coveragerc  pyproject.toml  setup.cfg
src/datasource_sqlalchemy/forestadmin/datasource_sqlalchemy/: __init__.py  collections.py  datasource.py  exceptions.py  interfaces.py
src/datasource_sqlalchemy/forestadmin/datasource_sqlalchemy/utils/: aggregation.py  model_converter.py  query_factory.py  record_serializer.py  relationships.py  type_converter.py
src/datasource_sqlalchemy/tests/: test_collections.py  test_datasource.py  test_sqlalchemy_collections.py  test_sqlalchemy_datasource.py
src/datasource_sqlalchemy/tests/fixture/: addresses.json  customers.json  customers_addresses.json  models.py  orders.json
src/datasource_sqlalchemy/tests/utils/: test_model_converter.py
src/datasource_toolkit/: .coveragerc  CHANGELOG.md  pyproject.toml  requirements.txt  setup.cfg
src/datasource_toolkit/forestadmin/datasource_toolkit/: collections.py  datasources.py  exceptions.py
src/datasource_toolkit/tests/datasource_customizer/: test_collection_customizer.py  test_composite_datasource.py  test_datasource_customizer.py
src/datasource_toolkit/tests/decorators/: test_collection_decorator.py  test_datasource_decorator.py  test_decorator_stack.py
src/datasource_toolkit/tests/interfaces/: test_actions.py
src/datasource_toolkit/tests/plugins/: test_import_field.py
src/datasource_toolkit/tests/rename_field/: test_rename_field_collection_decorator.py
src/datasource_toolkit/tests/utils/: test_collections.py
src/demos/flask_sqlalchemy/: README.md  pyproject.toml
src/demos/flask_sqlalchemy/demo/: .forestadmin-schema.json  app.py
src/flask_agent/: .coveragerc  __.coveragerc  pyproject.toml  requirements.txt  setup.cfg
src/flask_agent/forestadmin/flask_agent/: agent.py  exception.py
src/flask_agent/tests/: test_flask_agent.py  test_flask_agent_blueprint.py
src/flask_agent/tests/utils/: test_dispatcher.py  test_requests.py
src/rpc_common/: README.md  pyproject.toml
src/rpc_common/forestadmin/rpc_common/: hmac.py
(+402 files in other folders)
