[tool.poetry]
name = "forestadmin-datasource-toolkit"
version = "0.0.1a1"
description = ""
authors = ["Valentin Monté <valentinm@forestadmin.com>"]
readme = "README.md"
packages = [{include = "forestadmin"}]

[tool.poetry.dependencies]
python = ">=3.6"
pandas = [
    {version = "==1.1.5", python = "<3.7.1"},
    {version = "==1.3.5", python = ">=3.7.1,<3.8"},
    {version = "~1.4.2", python = ">=3.8"}
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"