[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "forestadmin-datasource-toolkit"
version = "0.1.0-beta.29"
description = ""
authors = [ "Valentin Monté <valentinm@forestadmin.com>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "forestadmin"

[tool.semantic_release]
prerelease_tag = "beta"
branch = "beta"
upload_to_pypi = false
upload_to_release = false
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
typing-extensions = "~=4.2"
tzdata = "~=2022.6"
[[tool.poetry.dependencies.pandas]]
version = "==1.1.5"
python = "<3.7.1"

[[tool.poetry.dependencies.pandas]]
version = "==1.3.5"
python = ">=3.7.1,<3.8"

[[tool.poetry.dependencies.pandas]]
version = "~=1.4.2"
python = ">=3.8"

[tool.poetry.dependencies."backports.zoneinfo"]
version = "~=0.2.1"
python = "<3.9"
extras = [ "tzdata",]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.linter]
optional = true

[tool.poetry.group.formatter]
optional = true

[tool.poetry.group.sorter]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "~=7.1"
pytest-asyncio = "~=0.18"
coverage = "~=6.5"
freezegun = "~=1.2.0"
pytest-cov = "^4.0.0"
[[tool.poetry.group.test.dependencies.mock]]
version = "4.0"
python = "3.7"

[tool.poetry.group.linter.dependencies]
[[tool.poetry.group.linter.dependencies.flake8]]
version = "~=5.0"
python = "<3.8.1"

[[tool.poetry.group.linter.dependencies.flake8]]
version = "~=6.0"
python = ">=3.8.1"

[tool.poetry.group.formatter.dependencies]
black = "~=22.10"

[tool.poetry.group.sorter.dependencies]
isort = "~=3.6"
