[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "forestadmin-rpc-common"
description = "common files for rpc server and client"
version = "1.23.0"
authors = [ "Julien Barreau <julien.barreau@forestadmin.com>",]
readme = "README.md"
repository = "https://github.com/ForestAdmin/agent-python"
documentation = "https://docs.forestadmin.com/developer-guide-agents-python/"
homepage = "https://www.forestadmin.com"
[[tool.poetry.packages]]
include = "forestadmin"

[tool.poetry.dependencies]
python = ">=3.8,<3.14"
