[tool.poetry]
name = "forestadmin-django-demo"
version = "0.0.1"
description = "empty project with models to plug forest into"
authors = ["Julien Barreau <julien.barreau@forestadmin.com>"]
readme = "README.md"
packages = [{ include = "django_demo" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
django = ">=4.2.0"
python-dotenv = ">= 1.0.0"
str2bool = ">= 1.0"
forestadmin-datasource-toolkit = { path = "../../datasource_toolkit", develop = true }
forestadmin-agent-toolkit = { path = "../../agent_toolkit", develop = true }
forestadmin-agent-django = { path = "../../django_agent", develop = true }
forestadmin-datasource-django = { path = "../../datasource_django", develop = true }

[tool.poetry.group.dev.dependencies]
coverage = "~=6.5"
flake8 = ">=5.0"
freezegun = "~=1.2.0"
pytest = "~=7.1"
pytest-asyncio = "~=0.18,<0.23.2"
pytest-cov = "^4.0.0"
pytest-django = ">=4.0.0"
black = ">=24.3.0"
isort = "~=3.6"
poethepoet = "^0.16.5"
faker = "^15.3.4"

[tool.poe.executor]
type = "simple"

[tool.poe.tasks]
init-db = { shell = "cd django_demo && python manage.py migrate" }
populate-db = { shell = "cd django_demo && python manage.py populate-db" }
runserver = { shell = "cd django_demo && python manage.py runserver" }
