[tool.poetry]
name = "forestadmin-flask-sqlalchemy-demo"
version = "0.1.0-beta.15"
description = ""
authors = ["Valentin Monté <valentin.monte@yahoo.fr>"]
readme = "README.md"
packages = [{include = "demo"}]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
Flask = "^2.2.2"
forestadmin-datasource-sqlalchemy = "^0.1.0-beta.15"
forestadmin-agent-flask = "^0.1.0-beta.15"
sqlalchemy = "^1.4.44"
flask-cors = "^3.0.10"
forestadmin-datasource-toolkit = "^0.1.0-beta.15"
forestadmin-agent-toolkit = "0.1.0-beta.15"

[tool.poe.tasks]
init-db  = { script = "demo.models.utils.init_db:create_all" }
populate-db  = { script = "demo.models.utils.populate_dev_db:populate" }
runserver = { shell = "flask --app demo.app run --reload" }

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.16.5"
faker = "^15.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
