[tool.poetry]
name = "forestadmin-flask-sqlalchemy-demo"
version = "0.1.0-beta.15"
description = ""
authors = ["Valentin Monté <valentin.monte@yahoo.fr>"]
readme = "README.md"
packages = [{include = "demo"}]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
Flask = "^2.0.0"
sqlalchemy = "^1.4.44"
flask-cors = "^3.0.8"
# forestadmin-datasource-toolkit = "^0.1.0-beta.15"
forestadmin-datasource-toolkit = {path = "../../datasource_toolkit", develop = true}
# forestadmin-agent-toolkit = "0.1.0-beta.15"
forestadmin-agent-toolkit = {path = "../../agent_toolkit", develop = true}
# forestadmin-datasource-sqlalchemy = "^0.1.0-beta.15"
forestadmin-datasource-sqlalchemy = {path = "../../datasource_sqlalchemy", develop = true}
# forestadmin-agent-flask = "^0.1.0-beta.15"
forestadmin-agent-flask = {path = "../../flask_agent", develop = true}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.linter]
optional = true

[tool.poetry.group.formatter]
optional = true

[tool.poetry.group.sorter]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "~=7.1"
pytest-asyncio = "~=0.18"
coverage = "~=6.5"
freezegun = "~=1.2.0"

[[tool.poetry.group.test.dependencies.mock]]
version = "4.0"
python = "3.7"

[tool.poetry.group.linter.dependencies]
[[tool.poetry.group.linter.dependencies.flake8]]
version = "~=5.0"
python = "<3.8.1"

[[tool.poetry.group.linter.dependencies.flake8]]
version = "~=6.0"
python = ">=3.8.1"

[tool.poetry.group.formatter.dependencies]
black = "~=22.10"

[tool.poetry.group.sorter.dependencies]
isort = "~=3.6"

[tool.poe.tasks]
init-db  = { script = "demo.models.utils.init_db:create_all" }
populate-db  = { script = "demo.models.utils.populate_dev_db:populate" }
runserver = { shell = "FLASK_APP=demo.app flask run --reload" }

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.16.5"
faker = "^15.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
